--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@angular/platform-browser-dynamic": "13.0.1",
     "@angular/router": "13.0.1",
     "primeflex": "2.0.0",
-    "primeicons": "4.1.0",
-    "primeng": "^11.3.0",
+    "primeicons": "5.0.0",
+    "primeng": "13.1.0",
     "quill": "1.3.7",
     "rxjs": "7.4.0",
     "tslib": "^2.1.0",
